<resources>
    <string name="app_name">Task Manager</string>
    <string-array name="spinner_items_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <!-- Add more items as needed -->
    </string-array>
    <string name="scrollDescription">Description</string>
    <!-- Modify Activity -->
    <string name="nameEditTextDefault">Name</string>
    <string name="descriptionTextDefault">Description</string>
    <string name="priorityLabelText">Priority</string>
    <string name="dateLabelText">Date</string>
    <string name="defaultTextView">Not Specified</string>
    <string name="timeLabelText">Time</string>
    <string name="saveBtnText">Save</string>
    <!-- Main Activity -->
    <string name="createTaskBtn">create a new task</string>
    <string name="navCurrentBtn">Current</string>
    <string name="navCompleterBtn">Completed</string>
    <string name="navSettingsBtn">Settings</string>
    <string name="open_menu">open menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="currentFragmentTitle">Ongoing Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="completedFragmentTitle">Completed Tasks</string>
    <string name="delete_task_btn">delete task</string>
    <string name="edit_task_btn">edit task</string>
    <string name="Create_Task_Title">What\'s on your mind today?</string>
    <string name="Task_Name_Hint">Name</string>
    <string name="Save_Task_Title">Save</string>
    <string name="Task_Description_Hint">Description</string>
    <string name="Task_Priority">Priority</string>
    <string name="Task_Date">(optional) Date</string>
    <string name="Select_Btn_Title">Select</string>
    <string name="Task_Time">(optional) Time</string>
    <string name="Editable_Checkbox">Editable</string>
    <string name="deadline">"Deadline: %1$s"</string>
</resources>